--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 */
 body {
 	font-family: "Source Sans Pro", Arial, sans-serif;
-	background-color: #c7e1ff;
+	background-color: #131414;
 	font-size: 13px;
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
 }
