--- a/css/examples.css
+++ b/css/examples.css
@@ -96,14 +96,14 @@ section#titlechart #description ol, section#titlechart #description p {
 section#titlechart #description ol {
 	list-style-position: outside;
 }
-#example-wrapper section#titlechart #description:after {
+/*#example-wrapper section#titlechart #description:after {
 	content: "↧";
 	font-size: 40px;
 	display: block;
 }
 #example-wrapper.horizontal section#titlechart #description:after {
 	content: "↦";
-}
+}*/
 
 
 section.demo * {
@@ -161,7 +161,7 @@ h1.badge.velocity:after {
 .spacer {
 	text-align: center;
 	min-height: 100px;
-	background-image: url("../img/example_bg_spacer_v.gif");
+	/*background-image: url("../img/example_bg_spacer_v.gif");*/
 }
 .spacer.s0 {
 	min-height: 1px;
